@@ -62,7 +62,8 @@ if (defined $Config{'d_dlsymun'}) { $OSDEF  .= ' -DDLSYMUN'; }
 	   gaussian.o conv.o pnm.o raw.o feat.o font.o
 	   filters.o dynaload.o stackmach.o datatypes.o
 	   regmach.o trans2.o quant.o error.o convert.o
-	   map.o tags.o palimg.o maskimg.o img16.o rotate.o);
+	   map.o tags.o palimg.o maskimg.o img16.o rotate.o
+	   win32.o);
 
 %opts=(
        'NAME'         => 'Imager',
